# eagleemu

./: 1  8086.inc  CMakeLists-emscripten.txt  CMakeLists.txt  Makefile  README.md  a.out  attach_debugger.sh  autotype  basic.aqxe  bioslib.asm  build_basic.sh  cmake_install.cmake  dump  dump1  eagleemu.cbp  eagleemu.depend  eagleemu.layout  eunix.asm  flash_512k.sh  gfx.c  gfx.h  hex2fp.py  iolib.asm  keyb.h  libc.inc  main.c  mathlib.asm  meson.build  music.aqxe  music.asm  nohup.out  oregontrail.ebas  pres.aqxe  presentation  presentation.asm  presmuzik.vgm  saa1099_ext.c  screentest.ebas  sd.h  (+24 more)
eaglebasic/: aqxe.asm  basic.asm  eaglebasic.geany  statements.asm  varalloc.asm
eaglebasic/operators/: operators.asm
src/: 8255.c  8255.h  cpu.c  cpu.h  keyb.c  main.c  pcr.c  pcr.h  saa1099_ext.c  saa1099_ext.h  sd.c  serial.c
